# good-open-source-review-py

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  t.ipynb
.github/workflows/: ci.yml
examples/ray/: Training a model with distributed XGBoost.ipynb  basic_tuning_example.ipynb
examples/xgboost/: xgboost_tuning.py
note/: 1. alternative_way_for_typing_decorator.py  2. feature_engineering_helper.py  3_pog_functools.py  mlflow.py
note/callback/: huggingface_trainer_callback.py
note/dataset/: sklearn_dataset.py
src/mlfunctools/: __init__.py  analysis.py  callback.py  metrics.py  mlflow.py  tuner.py  types.py
tests/: test_callback.py  test_metrics.py  test_mlflow.py
