[tool.poetry]
name = "mlfunctools"
version = "0.0.0"
description = "The mlfunctools build by Happydog."
authors = ["Happydog <happydog0930@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mlfunctools", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
tenacity = "^8.4.2"
magentic = "^0.27.0"
requests = "^2.32.3"
rich = "^13.7.1"
tqdm = "^4.66.4"
mlflow = "^2.14.1"
scikit-learn = "^1.5.1"
skrub = "^0.2.0"
optuna = "^3.6.1"
xgboost = "^2.1.0"
plotly = "^5.22.0"
polars = {extras = ["all"], version = "^1.0.0"}
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
setuptools = "^70.2.0"
flake8 = "^7.1.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["src", "tests"]
known_first_party = ["mlfunctools"]

[tool.mypy]
ignore_missing_imports = true
